--- a/initial-setup-final.ipynb
+++ b/initial-setup-final.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-23T19:22:01.466040Z",
-     "iopub.status.busy": "2022-02-23T19:22:01.464850Z",
-     "iopub.status.idle": "2022-02-23T19:22:05.677368Z",
-     "shell.execute_reply": "2022-02-23T19:22:05.676679Z",
-     "shell.execute_reply.started": "2022-02-23T19:22:01.465907Z"
+     "iopub.execute_input": "2022-02-23T21:01:19.937706Z",
+     "iopub.status.busy": "2022-02-23T21:01:19.937342Z",
+     "iopub.status.idle": "2022-02-23T21:01:20.001353Z",
+     "shell.execute_reply": "2022-02-23T21:01:19.997761Z",
+     "shell.execute_reply.started": "2022-02-23T21:01:19.937667Z"
     }
    },
    "outputs": [],
@@ -28,8 +28,9 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "from tensorflow import keras\n",
-    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras import layers, models\n",
     "from tensorflow.keras.models import Sequential\n",
+    "\n",
     "\n",
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "\n",
@@ -558,6 +559,7 @@
    },
    "outputs": [],
    "source": [
+    "# Pull out the individuals for whom only one image exists and put them in their own dataframe\n",
     "counts = full_train_df['individual_id'].value_counts()\n",
     "\n",
     "single_ind_df = full_train_df[full_train_df['individual_id'].isin(counts[counts == 1].index)]\n",
@@ -646,6 +648,7 @@
    },
    "outputs": [],
    "source": [
+    "# Split on the remaining dataframe\n",
     "train_val_df_id, test_df_id = train_test_split(partial_full_df, test_size=.152, stratify=partial_full_df['individual_id'], random_state=random_state)"
    ]
   },
@@ -680,6 +683,7 @@
    },
    "outputs": [],
    "source": [
+    "# Combine into one dataframe the unique individuals and the train group made above\n",
     "train_df_id = pd.concat([single_ind_df, train_df_id_lite]).sort_index()"
    ]
   },
@@ -809,6 +813,138 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Preparing our data\n",
+    "\n",
+    "We'll reduce our images to 256x256 each and apply some data augmentation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-02-23T20:57:06.297873Z",
+     "iopub.status.busy": "2022-02-23T20:57:06.297471Z",
+     "iopub.status.idle": "2022-02-23T20:57:06.933505Z",
+     "shell.execute_reply": "2022-02-23T20:57:06.931322Z",
+     "shell.execute_reply.started": "2022-02-23T20:57:06.297817Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 46056 validated image filenames belonging to 25 classes.\n",
+      "Found 2425 validated image filenames belonging to 25 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_gen_sp = ImageDataGenerator(rescale=1./255, \n",
+    "                                  shear_range = 0.2, \n",
+    "                                  zoom_range = 0.2, \n",
+    "                                  width_shift_range=0.2,  \n",
+    "                                  height_shift_range=0.2, \n",
+    "                                  rotation_range = 10\n",
+    "                                ).flow_from_dataframe(train_df_sp,\n",
+    "                                                      directory=kaggle_data_dir,\n",
+    "                                                      x_col='image',\n",
+    "                                                      y_col='species',\n",
+    "                                                      target_size=(256, 256), \n",
+    "                                                      batch_size=4,\n",
+    "                                                      color_mode='grayscale')\n",
+    "\n",
+    "val_gen_sp = ImageDataGenerator(rescale=1./255, \n",
+    "                                shear_range = 0.2, \n",
+    "                                zoom_range = 0.2, \n",
+    "                                width_shift_range=0.2,  \n",
+    "                                height_shift_range=0.2, \n",
+    "                                rotation_range = 10\n",
+    "                              ).flow_from_dataframe(val_df_sp,\n",
+    "                                                    directory=kaggle_data_dir,\n",
+    "                                                    x_col='image',\n",
+    "                                                    y_col='species',\n",
+    "                                                    target_size=(256, 256), \n",
+    "                                                    batch_size=4,\n",
+    "                                                    color_mode='grayscale')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-02-23T21:19:04.333451Z",
+     "iopub.status.busy": "2022-02-23T21:19:04.333150Z",
+     "iopub.status.idle": "2022-02-23T21:19:04.505535Z",
+     "shell.execute_reply": "2022-02-23T21:19:04.504016Z",
+     "shell.execute_reply.started": "2022-02-23T21:19:04.333421Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cnn1 = models.Sequential()\n",
+    "cnn1.add(layers.Conv2D(32, (3, 3), activation='relu',\n",
+    "                        input_shape=(256, 256,  1)))\n",
+    "cnn1.add(layers.MaxPooling2D((2, 2)))\n",
+    "\n",
+    "cnn1.add(layers.Conv2D(32, (4, 4), activation='relu'))\n",
+    "cnn1.add(layers.MaxPooling2D((2, 2)))\n",
+    "\n",
+    "cnn1.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "cnn1.add(layers.MaxPooling2D((2, 2)))\n",
+    "\n",
+    "cnn1.add(layers.Flatten())\n",
+    "cnn1.add(layers.Dense(64, activation='relu'))\n",
+    "cnn1.add(layers.Dense(25, activation='softmax'))\n",
+    "\n",
+    "cnn1.compile(loss='categorical_crossentropy',\n",
+    "              optimizer=\"adam\",\n",
+    "              metrics=['acc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-02-23T21:19:04.698177Z",
+     "iopub.status.busy": "2022-02-23T21:19:04.697900Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "11514/11514 [==============================] - 7271s 631ms/step - loss: 1.8130 - acc: 0.4583 - val_loss: 1.5533 - val_acc: 0.5353\n",
+      "Epoch 2/2\n",
+      " 8503/11514 [=====================>........] - ETA: 28:50 - loss: 1.4296 - acc: 0.5670"
+     ]
+    }
+   ],
+   "source": [
+    "history_cnn1 = cnn1.fit(train_gen_sp,\n",
+    "                        epochs=2,\n",
+    "                        validation_data=val_gen_sp\n",
+    "                        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -817,6 +953,95 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get all the data in the directory split/train (542 images), and reshape them\n",
+    "train_gen_sp = ImageDataGenerator(rescale=1./255, \n",
+    "                                     shear_range = 0.2, \n",
+    "                                     zoom_range = 0.2, \n",
+    "                                     width_shift_range=0.2,  \n",
+    "                                     height_shift_range=0.2, \n",
+    "                                     rotation_range = 10\n",
+    "                                   ).flow_from_directory(train_dir,target_size=(256, 256), \n",
+    "                                                         batch_size=4,\n",
+    "                                                         color_mode='grayscale')\n",
+    "\n",
+    "# get all the data in the directory split/validation (200 images), and reshape them\n",
+    "val_gen_sp = ImageDataGenerator(rescale=1./255, \n",
+    "                                   shear_range = 0.2, \n",
+    "                                   zoom_range = 0.2, \n",
+    "                                   width_shift_range=0.2,  \n",
+    "                                   height_shift_range=0.2, \n",
+    "                                   rotation_range = 10\n",
+    "                                   ).flow_from_directory(val_dir,target_size=(256, 256), \n",
+    "                                                         batch_size=4,\n",
+    "                                                         color_mode='grayscale')\n",
+    "\n",
+    "# get all the data in the directory split/test (180 images), and reshape them\n",
+    "test_gen_sp = ImageDataGenerator(rescale=1./255, \n",
+    "                                    shear_range = 0.2, \n",
+    "                                    zoom_range = 0.2, \n",
+    "                                    width_shift_range=0.2,  \n",
+    "                                    height_shift_range=0.2, \n",
+    "                                    rotation_range = 10\n",
+    "                                    ).flow_from_directory(test_dir,target_size=(256, 256), \n",
+    "                                                          batch_size=4,\n",
+    "                                                          color_mode='grayscale')"
+   ]
   },
   {
    "cell_type": "code",
